# wrapYield

./: .gitignore  .gitmodules  ARCHITECTURE.md  README.md  start-local.sh  stop-local.sh
backend-service/: .env.local  ANVIL_INTEGRATION.md  ARCHITECTURE_DETAILED.md  DATABASE_QUERIES.md  DEVELOPMENT_SETUP.md  Dockerfile  FILE_BASED_SIGNATURE_ARCHITECTURE.md  FOUNDRY_VS_ETHERS_ANALYSIS.md  README.md  UNIFIED_FRONTEND_ARCHITECTURE.md  docker-compose.yml  drizzle.config.ts  package.json  test-contract.js  test-events.js  tsconfig.json
bitcoin-scripts/: .gitignore  Cargo.toml  README.md
btc-backend/: docker-compose.yml  readme.md  setup-wallets.sh
btc-vaultero/: .gitignore  README.md  pyproject.toml  todo
btc-vaultero/misc/: borrower_signature.json
btc-vaultero/src/vaultero/: __init__.py  chained_txs.py  core.py  loan.py  setup_utils.py  spend_complex_p2tr.py  utils.py
btc-vaultero/src/vaultero.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
btc-vaultero/tests/: conftest.py  test_core.py  test_separate_signatures.py  test_utils.py
config/: Makefile  README.md  __init__.py  demo_sync_workflow.py  example_usage.py  generate_solidity_config.py  package.json  parameters.json  python_config.py  sync_validation.py  (+2 more)
rust-bitcoin-scripts/: .gitignore  Cargo.toml  README.md
rust-bitcoin-scripts/src/: classic_multisig.rs  lib.rs  main.rs  simple_taproot.rs  test_setup.rs  timelock_cltv.rs
rust-bitcoin-scripts/tests/: classic_multisig_tests.rs  cltv_timelock_tests.rs  csv_timelock_tests.rs  integration_tests.rs  simple_taproot_tests.rs
(+154 files in other folders)
