[package]
name = "bitcoin-scripts"
version = "0.1.0"
edition = "2021"

[lib]
name = "bitcoin_scripts"
path = "src/lib.rs"

[dependencies]
bitcoin = "0.30"
miniscript = "10"
secp256k1 = "0.27"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
hex = "0.4"
base64 = "0.21"

[dev-dependencies]
tokio-test = "0.4"

